--- a/changelog
+++ b/changelog
@@ -1,3 +1,6 @@
+Version 4.0.6
+- Prevent heap buffer overflow writing annotated mmCIF file.
+
 Version 4.0.5
 - The options for loading custom dictionary files and the like are now
   visible in the help again.
